[tool.poetry]
name = "try_match"
version = "0.1.0"
description = "Pattern matching"
authors = ["Zhengyu Xu <zen-xu@outlook.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
